UY-1191 rest group and entity related types